# Condivisione-Fermi

./: .appveyor.yml  .gitignore  README.md  mailsender.py  pyproject.toml  requirements.txt  server.py  tests.py  tox.ini
condivisione/: authentication.py  backend_tests.py  dependencies.py  enums.py  main.py
condivisione/database/: crud.py  db.py  models.py  schemas.py
condivisione/database/crud/: appointment.py  common.py  course.py  messages.py  server.py  subjects.py  users.py
condivisione/routers/: courses.py  messages.py  server.py  subjects.py  users.py
frontend/condivisione-navigator/: package-lock.json  package.json
frontend/condivisione-navigator/src/: App.css  App.js  Routes.js  i18n.js  index.js
frontend/condivisione-navigator/src/containers/: Home.js  Home.module.css  NotFound.module.css  Resume.js  ServerFav.js  ServerSelector.js
frontend/condivisione-navigator/src/containers/Instance/: Dashboard.js  Homepage.js  Login.js  Register.js
static/: style.css
templates/: 400.htm  403.htm  500.htm  brasatura.htm  dashboard.htm  informazioni.htm  login.htm  nav.htm  stampo.htm
templates/Corso/: add.htm  join.htm  membri.htm
templates/Materia/: add.htm  edit.htm
templates/Notifica/: del.htm  list.htm  rilancia.htm
templates/User/: add.htm  ascend.htm  edit.htm  inspect.htm  list.htm  peerinspect.htm
