[tool.poetry]
name = "condivisione"
version = "1.4.0"
description = ""
authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
psycopg2-binary = "^2.9.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.25"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sniffio = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
